[gd_scene load_steps=13 format=3 uid="uid://c6na53py5hyof"]

[ext_resource type="Script" path="res://dialogic/cutscene/cutscene15_5C.gd" id="1_43ht4"]
[ext_resource type="Script" path="res://scenes/objects/GoalAreaRocket.gd" id="2_r7kon"]
[ext_resource type="Texture2D" uid="uid://bmocxh6l1yg8u" path="res://assets_image/Objects/bullet.png" id="3_fktvf"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xwwtj"]
size = Vector2(323, 190)

[sub_resource type="Animation" id="Animation_3uu3n"]
resource_name = "cutscene1"
length = 5.0
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 4.9, 5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"values": [{
"args": [],
"method": &"proxy_disable_player_input_for_cutscene"
}, {
"args": ["run"],
"method": &"proxy_play_player_visual_animation"
}, {
"args": ["idle"],
"method": &"proxy_play_player_visual_animation"
}, {
"args": [],
"method": &"_start_dialogic_from_animation"
}]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [1],
"method": &"proxy_set_player_face_direction"
}]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [Vector2(-1578, -427), 5.0, 1, 1],
"method": &"proxy_move_player_to_position"
}]
}

[sub_resource type="Animation" id="Animation_4t64i"]
resource_name = "cutscene1.1"
length = 2.0
loop_mode = 1
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": ["idle"],
"method": &"proxy_play_player_visual_animation"
}]
}

[sub_resource type="Animation" id="Animation_x330y"]
resource_name = "cutscene2"
length = 5.0
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.2, 5),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [-1],
"method": &"proxy_set_player_face_direction"
}, {
"args": [],
"method": &"proxy_enable_player_input_after_cutscene"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_cywr2"]
_data = {
"cutscene1": SubResource("Animation_3uu3n"),
"cutscene1.1": SubResource("Animation_4t64i"),
"cutscene2": SubResource("Animation_x330y")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ekhh6"]
size = Vector2(34.75, 17)

[sub_resource type="Animation" id="Animation_j4vyj"]
resource_name = "run"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4]
}

[sub_resource type="Animation" id="Animation_1r0l4"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_nm8mm"]
_data = {
"RESET": SubResource("Animation_1r0l4"),
"run": SubResource("Animation_j4vyj")
}

[node name="cutscene15_5C" type="Area2D"]
position = Vector2(79, 74)
script = ExtResource("1_43ht4")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(91.5, 30)
shape = SubResource("RectangleShape2D_xwwtj")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_cywr2")
}

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(-2, -27)
zoom = Vector2(2, 2)

[node name="npc1" type="Sprite2D" parent="."]

[node name="FailTimer" type="Timer" parent="."]
wait_time = 20.0

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer" groups=["boss1_cutscene"]]
visible = false
modulate = Color(0.380392, 0.380392, 0.380392, 0.784314)
offset_left = 256.0
offset_right = 320.0
offset_bottom = 32.0

[node name="TimerLabel" type="Label" parent="CanvasLayer"]
visible = false
offset_left = 280.0
offset_top = 8.0
offset_right = 320.0
offset_bottom = 21.0
text = "Time"
metadata/_edit_use_anchors_ = true

[node name="GoalArea" type="Area2D" parent="."]
script = ExtResource("2_r7kon")
speed = 50.0
loop = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="GoalArea"]
position = Vector2(-5.375, 1.5)
shape = SubResource("RectangleShape2D_ekhh6")

[node name="Sprite2D" type="Sprite2D" parent="GoalArea"]
scale = Vector2(2, 2)
texture = ExtResource("3_fktvf")
hframes = 5

[node name="AnimationPlayer" type="AnimationPlayer" parent="GoalArea"]
libraries = {
"": SubResource("AnimationLibrary_nm8mm")
}

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
